# vesta

projects/titan/src/terrain/: chunk.rs
titan/: Cargo.toml
titan/assets/shaders/: chunk.wgsl  chunk_io.wgsl  chunk_prepass.wgsl
titan/assets/shaders/utils/: chunk_material.wgsl  custom_material_functions.wgsl
titan/src/: main.rs  table.rs  terrain.rs
titan/src/atlas/: mod.rs
titan/src/chunk/: material.rs  mesher.rs  mod.rs
titan/src/player/: mod.rs  systems.rs
titan/src/world/: generation.rs  meshing.rs  mod.rs  systems.rs
