[package]
name = "titan"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

[dependencies]
bevy = "0.11.0"
bevy_egui = "0.21.0"
bevy_atmosphere =  { git = "https://github.com/GodGotzi/bevy_atmosphere" }
bevy_rapier3d = { version = "0.22.0", features = [ "simd-stable", "debug-render" ] }
bevy_asset_loader = "0.17.0"
bevy-inspector-egui = "0.19.0"
smooth-bevy-cameras = { git = "https://github.com/bonsairobo/smooth-bevy-cameras" }
bracket-noise = "0.8.7"
rand = "0.8.5"
futures-lite = "1.13.0"
thiserror = "1.0.30"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# High performance for release, slow compile times
[profile.release]
lto = "thin"
codegen-units = 1
