[package]
name = "titan"
version = "0.1.0"
authors = ["Dominic Maas <dominic.maas@live.com>"]
edition = "2021"

[dependencies]
bevy = "0.13.1"
bevy_egui = "0.26.0"
bevy_atmosphere =  "0.9.0"
bevy_rapier3d = { version = "0.25.0", features = [ "simd-stable", "debug-render" ] }
bevy_asset_loader = "0.20.0"
bevy-inspector-egui = "0.23.4"
smooth-bevy-cameras = "0.11.0"
bracket-noise = "0.8.7"
rand = "0.8.5"
futures-lite = "1.13.0"
thiserror = "1.0.58"
iyes_perf_ui = "0.2.3"
fast-surface-nets = "0.2.0"
bevy_fpc = { git = "https://codeberg.org/Eternahl/bevy_fpc" }

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# High performance for release, slow compile times
[profile.release]
lto = "thin"
codegen-units = 1
